#old alignment fixed

--- a/style.css
+++ b/style.css
@@ -28,11 +28,9 @@ canvas#confetti {
     pointer-events: none;
 }
 
-/* CSS */
 .button-53 {
     background-color:black;
     color:cyan;
-    position: relative;
     text-align: center;
     text-decoration-thickness: auto;
     width: 50vw;
@@ -46,6 +44,7 @@ canvas#confetti {
     touch-action: manipulation;
     align-items: center;
     text-align: center;
+    margin-top: 10px;
 }
 
 .button-53:after {
@@ -56,18 +55,19 @@ canvas#confetti {
     width: calc(100% - 1px);
     height: calc(100% - 1px);
 }
-#old{
+#old {
     font-weight: 800;
     font-size: 30px;
-    position: fixed;
-    top: 52%;
-    left: 44.5%;
+    position: absolute;
+    top: 54%;
+    left: 50%;
+    transform: translateX(-50%) rotate(-2deg);
     color: white;
-    transform: rotate(-2deg);
-    cursor:pointer;
+    cursor: pointer;
     background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-align: center;
 }
 @media (min-width: 768px) {
     .button-53 {
